# MARAW-Multi-Agentic-Research-Article-Writer

./: Server.js  User.js  abstract.docx  demo1.html  index.html  index1.html  maraw.py  output_paper.tex  package-lock.json  package.json  pricing1.css  pricing1.html  requirements.txt  script1.js  style1.css
Older Files/: demo.html  index.html  index_new.html  pricing.html  validation.js
css/: demo1.css  pricing.css  pricing1.css  responsive.css  style.css  style1.css  style_new.css
js/: app.py  bootstrap.js  custom.js  demo1.js  demo2.js  demo3.js  onLoad.js  pricing1.js  script1.js  server.py  test.py
maraw/: README.md  pyproject.toml
maraw/src/maraw/: crew.py  main.py
maraw/src/maraw/config/: agents.yaml  tasks.yaml
