[project]
name = "maraw"
version = "0.1.0"
description = "MARAW using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
maraw = "maraw.main:run"
run_crew = "maraw.main:run"
train = "maraw.main:train"
replay = "maraw.main:replay"
test = "maraw.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
